--- a/client/index.html
+++ b/client/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="Autopulse" />
 
     <meta property="og:title" content="Autopulse" />
-    <meta property="og:description" content="Autopulse - Intelligent Call Analytics" />
+    <meta
+      property="og:description"
+      content="Autopulse - Intelligent Call Analytics"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
